@@ -71,6 +71,9 @@ tasks.withType(Test).configureEach {
     // Kryo needs reflective access to these packages.
     jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED',
             '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.time.chrono=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.time.zone=ALL-UNNAMED',
             '--add-opens', 'java.base/java.util=ALL-UNNAMED'
 }
 
